added filters for size, brand and color
